# dundie-rewards

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  alembic.ini  conftest.py  pyproject.toml  refresh.sh  requirements.dev.txt  requirements.test.txt  requirements.txt  setup.py  simple_gui_example.py  tk_sexample.py
.github/workflows/: main.yml
assets/: database.example.json  database.json  people.csv
docs/: how_to_install.md  how_to_use.md  index.md  roadmap.md
dundie/: VERSION.txt  __main__.py  cli.py  core.py  database.py  models.py  settings.py
dundie/utils/: auth.py  db.py  email.py  exchange.py  log.py
integration/: confitest.py  test_load.py
migrations/versions/: 50c6d428d9e3_add_currency_colunm_on_person_table.py  61f71d2afe24_initial.py
tests/: confitest.py  test_add.py  test_database.py  test_load.py  test_read.py  test_utils.py
tests/assets/: people.csv
